--- a/QTechNote.Api/wwwroot/index.html
+++ b/QTechNote.Api/wwwroot/index.html
@@ -84,7 +84,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Rosana Clinic API</h1>
+        <h1>Welcome to QTech Note API</h1>
         <p class="description">
             Explore our API documentation using your preferred documentation viewer.
             Choose between Swagger UI for interactive documentation or Scalar for a modern documentation experience.
@@ -97,11 +97,6 @@
                 <a href="/swagger" class="button swagger-btn">View Swagger</a>
             </div>
             
-            <div class="doc-option">
-                <h2>Scalar</h2>
-                <p>Modern, clean API documentation experience</p>
-                <a href="/scalar/v1" class="button scalar-btn">View Scalar</a>
-            </div>
         </div>
     </div>
 </body>
